MyAgentforceProject/force-app/main/default/objects/Opportunity/fields/Bedrock_Region__c.field-meta.xml
<CustomField>
    <fullName>Bedrock_Region__c</fullName>
    <label>Bedrock Region</label>
    <description>Identifies the sales region for this opportunity for use in the Bedrock Dynamic Process Framework. The existing Region__c formula field is read-only; this field provides a writable region classification.</description>
    <inlineHelpText>Select the geographic region this opportunity is managed from: West, East, APAC, or EMEA. Used by the Business Process Workspace component to select the correct process steps.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>