MyAgentforceProject/force-app/main/default/objects/Opportunity/fields/BedrockAmount__c.field-meta.xml
<CustomField>
    <fullName>BedrockAmount__c</fullName>
    <label>Bedrock Amount</label>
    <description>Deal value used by the Bedrock Dynamic Process Framework to evaluate regional routing thresholds for process step selection.</description>
    <inlineHelpText>Enter the total deal value in USD. This amount is evaluated against process step minimum thresholds to determine which process applies (e.g., high-value EMEA deals above $100,000 route to a specialist process).</inlineHelpText>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>