MyAgentforceProject/force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Account region</description>
    <formula>TEXT(Account.SDO_Sales_Region__c)</formula>
    <inlineHelpText>Account region</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>